@@ -3,13 +3,13 @@
 
   // private vars
   var DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, ELEMENT_NODE, TEXT_NODE, Class,
-   Data, Document, Element, Enumerable, Form, Func, Obj, Node, NodeList, Window,
-   $break, _extend, fuse, addArrayMethods, bind, capitalize, clone,concatList,
-   defer, eachKey, emptyFunction, envAddTest, envTest, escapeRegExpChars, expando,
-   fromElement, getDocument, getNodeName, getWindow, hasKey, inspect, isArray,
-   isElement, isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive,
-   isRegExp, isSameOrigin, isString, isUndefined, K, nil, prependList,
-   returnOffset, slice, toInteger, toString, undef, userAgent;
+   Document, Element, Enumerable, Form, Func, Obj, Node, NodeList, Window,
+   $break, _extend, fuse, addArrayMethods, bind, capitalize, clone, concatList,
+   defer, domData, eachKey, emptyFunction, envAddTest, envTest, escapeRegExpChars,
+   expando, fromElement, getDocument, getNodeName, getWindow, hasKey, inspect,
+   isArray, isElement, isEmpty, isHash, isHostObject, isFunction, isNumber,
+   isPrimitive, isRegExp, isSameOrigin, isString, isUndefined, K, nil,
+   prependList, returnOffset, slice, toInteger, toString, undef, userAgent;
 
   fuse =
   global.fuse = function fuse() { };
